Fixed scrollbar issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,12 +8,11 @@ background: #9796f0;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #fbc7d4, #9796f0);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #fbc7d4, #9796f0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-
-
-
 border-radius: 16px;
 box-shadow: 0 4px 30px #0000001a;
 backdrop-filter: blur(8px);
 -webkit-backdrop-filter: blur(8px);
 border: 1px solid rgba(255, 255, 255, 0.2);
+margin: 0;
+height: 100vh;
 }
